--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "manifest_version": 2,
-    "name": "Color Champ Launcher",
-    "description": "Quick launh Color Champ",
+    "manifest_version": 3,
+    "name": "Color Champ",
+    "description": "Color Champ: Color saving tool",
     "version": "1.0.0",
     "icons": {"128": "icon_128.png"},
-    "broaswer_action": {
+    "action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
